[gd_scene load_steps=8 format=3 uid="uid://cuc6y10urt8g8"]

[ext_resource type="Script" path="res://enemy/slime.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://c34iodm6vmlu" path="res://enemy/blue_slime1.png" id="2_tv5it"]
[ext_resource type="Texture2D" uid="uid://dq4g6uqg2mb0a" path="res://enemy/blue_slime2.png" id="3_s5icc"]
[ext_resource type="Texture2D" uid="uid://mxf5mukpodyh" path="res://enemy/blue_slime3.png" id="4_25ve8"]

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_tv5it")
}, {
"duration": 1.0,
"texture": ExtResource("3_s5icc")
}, {
"duration": 1.0,
"texture": ExtResource("4_25ve8")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="3"]
radius = 46.0

[sub_resource type="CircleShape2D" id="2"]
radius = 46.0109

[node name="SlimeKine" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1")

[node name="SlimeAnimSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(-2, -22)
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("3")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("2")

[node name="SlimeRay" type="RayCast2D" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
